--- a/MyCity4Kids/MyCity4Kids/res/layout/coachmark_grid_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/coachmark_grid_view.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -210,23 +210,31 @@
             <!--</LinearLayout>-->
 
         </LinearLayout>
+
+
     </HorizontalScrollView>
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="@dimen/space_30"
+        android:background="@color/white" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/exploreCategoriesLabel"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="@dimen/space_10"
+        android:layout_marginRight="@dimen/space_30"
+        android:layout_marginBottom="@dimen/space_10"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
-        android:text="@string/explore_listing.explore_categories.title"
-        android:textColor="@color/explore_listing.explore_categories.title"
+        android:text="Participate and earn in MyMoney campaigns"
+        android:textColor="@color/black"
         android:textSize="16sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:fontName="oswald.ttf" />
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="10dp"
-        android:background="@color/white" />
+
 </LinearLayout>
