image proof done

--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_delete_svg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_delete_svg.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@color/app_red"
+        android:fillColor="#EB3955"
         android:pathData="M6.3,21c0,0.5 0.5,1 1,1h9.4c0.5,0 1,-0.4 1,-1l0.7,-14.2H5.6L6.3,21zM14.1,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4zM11.3,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4L11.3,10.4zM8.4,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4H8.8c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4z" />
     <path
         android:fillColor="@color/app_red"
