--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#0DEB3955"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <RelativeLayout
         android:id="@+id/relativeParent"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:background="@color/white"
         android:gravity="center">
 
         <ImageView
@@ -25,7 +27,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginBottom="0dp"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_add_proof" />
 
         <ImageView
@@ -49,4 +51,11 @@
             android:visibility="gone"
             app:srcCompat="@drawable/ic_edit_proof" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/imageAcceptedRejected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeParent"
+        android:layout_marginTop="5dp" />
 </RelativeLayout>
