congratulation screen flow done after add proof

--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_congratulation_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_congratulation_layout.xml
@@ -45,6 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerRelativeLayout" />
 
+
     <RadioButton
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
@@ -63,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
         android:gravity="center_vertical"
-        android:text="Your proofs and payment details have been successfully submitted."
+        android:text="Thanks for submitting proof and payment details"
         android:textColor="#4A4A4A"
         android:textSize="16sp"
         app:fontName="oswald.ttf"
@@ -103,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/space_5"
         android:layout_marginTop="25dp"
-        android:text="Submission Approved"
+        android:text="Proof approval is pending"
         android:textSize="16sp"
         app:fontName="oswald.ttf"
         app:layout_constraintStart_toEndOf="@id/one"
@@ -116,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/space_5"
         android:layout_marginTop="22dp"
-        android:text="Payment Completed "
+        android:text="Post approval, payment would be made"
         android:textSize="16sp"
         app:fontName="oswald.ttf"
         app:layout_constraintStart_toEndOf="@id/two"
