--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_congratulation_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_congratulation_layout.xml
@@ -20,6 +20,7 @@
             android:id="@+id/congratulationHeaderImageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:clickable="false"
             android:src="@drawable/congratulations_screen_illustration" />
 
         <android.support.v7.widget.AppCompatImageView
@@ -40,6 +41,7 @@
         android:text="CONGRATULATIONS!"
         android:textColor="#4A4A4A"
         android:textSize="30dp"
+        android:clickable="false"
         app:fontName="oswald_regular.ttf"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +68,7 @@
         android:text="Your proofs and payment details have been successfully submitted."
         android:textColor="#4A4A4A"
         android:textSize="16sp"
+        android:clickable="false"
         app:fontName="oswald.ttf"
         app:layout_constraintStart_toEndOf="@id/radioButton"
         app:layout_constraintTop_toBottomOf="@id/textView5" />
@@ -106,6 +109,7 @@
         android:text="Submission Approved"
         android:textSize="16sp"
         app:fontName="oswald.ttf"
+        android:clickable="false"
         app:layout_constraintStart_toEndOf="@id/one"
         app:layout_constraintTop_toBottomOf="@+id/radioButton" />
 
