--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -41,10 +41,10 @@
                 android:drawableLeft="@drawable/ic_share_white"
                 android:drawablePadding="@dimen/space_7"
                 android:gravity="center"
-                android:paddingLeft="@dimen/space_15"
-                android:paddingTop="@dimen/space_10"
-                android:paddingRight="@dimen/space_15"
-                android:paddingBottom="@dimen/space_10"
+                android:paddingLeft="8dp"
+                android:paddingTop="5dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="5dp"
                 android:text="SHARE"
                 android:textColor="@color/white"
                 android:textSize="14sp"
