--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
@@ -53,13 +53,22 @@
             android:id="@+id/saveContinueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/app_red"
             android:gravity="center_horizontal"
-            android:padding="@dimen/space_20"
-            android:text="SAVE AND CONTINUE"
+            android:paddingLeft="35dp"
+            android:paddingTop="15dp"
+            android:paddingRight="35dp"
+            android:paddingBottom="15dp"
+            android:text="@string/save_continue"
             android:textColor="@color/white"
-            android:textSize="22sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:fontName="oswald_regular.ttf" />
+
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/textLater"
