--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_fragment.xml
@@ -308,7 +308,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_transparent"
-        android:visibility="visible"/>
+        android:visibility="invisible" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -318,7 +318,7 @@
         android:layout_below="@+id/searchTopicsEditText"
         android:layout_marginLeft="16dp"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <HorizontalScrollView
             android:id="@+id/quickLinkContainer1"
