--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -73,4 +73,7 @@
     <dimen name="space_103">103dp</dimen>
     <dimen name="space_35">35dp</dimen>
     <dimen name="space_13">13dp</dimen>
+    <dimen name="space_140">140dp</dimen>
+    <dimen name="space_145">145dp</dimen>
+    <dimen name="space_155">155dp</dimen>
 </resources>
