--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -490,9 +490,9 @@
     <color name="campaign_expired_background">#9B9B9B</color>
     <color name="campaign_show_mymoney_btn">#56CD6A</color>
     <color name="campaign_refer_code_error">#D0021B</color>
-    <color name = "campaign_approved_rejected">#6FA138</color>
-
-
+    <color name="campaign_approved_rejected">#6FA138</color>
+    <color name="campaign_feed_register">#23C9AC</color>
+    <color name="campaign_feed_register_textview">#23CAAD</color>
 
     <color name="black_64">#A6000000</color>
 </resources>
